# mammography-pipelines-py

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLI_CHEATSHEET.md  Compare Model Performance.md  Dockerfile  Funcionamento.md  Projeto.py  QUICKSTART.md  README.md  RSNA_Mammo_EfficientNetB0_Density.py  RSNA_Mammo_EfficientNetB0_Density_ABxCD.py  RSNA_Mammo_EfficientNetB0_mamografias.py  RSNA_Mammo_EfficientNetB0_mamografias_multiclass.py  RSNA_Mammo_EfficientNetB0_patches.py  RSNA_Mammo_EfficientNetB0_patches_multiclass.py  RSNA_Mammo_ResNet50_Density.py  RSNA_Mammo_ResNet50_Density_ABxCD.py  RSNA_Mammography_EDA.py  Unified_Mammo_Classifier.py  analyze_coverage.py  clean_archive.ps1  clean_archive.sh  convert_archive_to_png.ps1  extract_mammo_resnet50.py  find_python.sh  mammo_density_template.csv  menu.py  mlflow.db  pyproject.toml  requirements-base.txt  requirements-macos.txt  requirements-windows-cpu.txt  requirements-windows-gpu.txt  requirements.txt  run_contract_performance_tests.sh  run_e2e_minimal_test.sh  run_e2e_smoke_test.sh  run_fast_tests_custom.sh  (+30 more)
ResNet50_Test/: DOCUMENTATION_SUMMARY.md  Dockerfile  GPU_SUPPORT_GUIDE.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_cli.py  test_basic_implementation.py
ResNet50_Test/configs/: base.yaml
ResNet50_Test/docs/: clustering_analysis.md  code_quality.md  dicom_processing.md  embedding_extraction.md  learning_guide.md  research_disclaimers.md  visualization_methods.md
ResNet50_Test/scripts/: check_disclaimers.py  check_medical_data.py  check_patient_splitting.py  check_status.py
ResNet50_Test/src/: __init__.py
archive_legacy/density_classifier/: README.md  requirements.txt
archive_legacy/patch_marking/: README.md  RenameFolders.ps1
archive_legacy/tools_legacy/: convert_archive_to_png.py
configs/: automl.yaml  density.yaml  paths.yaml  tune.yaml  view_specific_training.yaml
configs/examples/: splits_example.yaml
configs/rl/: policy.yaml
density_classifier/: requirements.txt
docs/: 1 Overview.md  1a Getting-Started.md  1b Repository-Structure.md  1c Key-Concepts.md  2 Mammography-CLI-Reference.md  2a mammography-embed.md  2b mammography-train-density.md  2c mammography-eval-export.md  2d mammography-report-pack.md  2e mammography-embeddings-baselines.md  3 Machine-Learning-Pipeline.md  3a Embedding-Extraction-(ResNet50).md  3b Density-Classification-(EfficientNetB0).md  3c Transfer-Learning-Strategies.md  3d Training-Loop-and-Optimization.md  3e Cross-Validation-and-Hyperparameter-Optimization.md  4 Data-Management.md  4a DICOM-Datasets.md  4b Preprocessing-and-Augmentation.md  4c Data-Splitting-and-Stratification.md  4d Class-Imbalance-Handling.md  4e Caching-Strategies.md  5 Evaluation-and-Metrics.md  5a Performance-Metrics.md  5b Confusion-Matrices-and-Per-Class-Analysis.md  5c Grad-CAM-Visualizations.md  5d Training-History-and-Convergence.md  6 Reproducibility-and-Experiment-Tracking.md  6a Random-Seeds-and-Variability.md  6b Output-Directory-Structure.md  6c Artifact-Logging.md  6d Model-Performance-Comparisons.md  7 Model-Collapse-Prevention.md  8 Article-Documentation-System.md  8a LaTeX-Template-Structure.md  8b Compiling-the-Article.md  8c Bibliography-Management.md  8d Integrating-ML-Results-with-LaTeX.md  9 Development-Guide.md  9a Environment-Setup.md  (+4 more)
mammography/: README.md  __init__.py
mammography/scripts/: eda_cancer.py  extract_features.py  label_density.py  label_patches.py  train.py  train_rl.py  visualize.py
outputs/test_stage2_smoke_2/: train_history.csv  val_metrics.json
patch_marking/: annotations.csv
patch_marking/src/: main.py  utils.py
requirements/: requirements-base.txt  requirements-gpu.txt  requirements-macos.txt  requirements-windows-cpu.txt  requirements-windows-gpu.txt
rl_refinement/: __init__.py  env.py  eval.py  policy.py
scripts/: augment.py  eda_cancer.py  embeddings_baselines.py  extract_features.py  inference.py  label_density.py  label_patches.py  train.py  visualize.py
src/mammography/: README.md  __init__.py  cli.py  cli_config.py  cli_dispatch.py  cli_parser.py  config.py  wizard.py  wizard_core.py  wizard_flows.py
test_data/: data.csv
test_data/embeddings/: metadata.csv
test_outputs/checkpoints/: best_model.pth  last_model.pth
test_outputs/features/: features.npy  metadata.csv  pca.npy
tests/: __init__.py  conftest.py  helpers.py  stage1_classifiers.py  test_assertions.py  test_cache_mode.py  test_conftest_fixtures.py  test_csv_mapping.py  test_dataset_transforms.py  test_projeto_cli.py  test_projeto_pipeline.py  test_rl_env.py  test_stage1_smoke.py
tests/contract/: README.md  __init__.py  test_clustering_api.py  test_embedding_api.py
tests/coverage/: README.md  __init__.py  test_coverage_analysis.py
tests/integration/: README.md  __init__.py  test_auto_detection.py  test_auto_normalization.py  test_automl_command.py  test_batch_inference_e2e.py  test_cancer_pipeline.py  test_checkpoint_workflows.py  test_cli_comprehensive.py  test_cli_integration.py  test_clustering_pipeline.py  test_compare_models_workflow.py  test_config_loading.py  test_cv_workflow.py  test_dataset_presets.py  test_dicom_import_compatibility.py  test_dicom_io.py  test_dicom_lazy_integration.py  test_embedding_extraction.py  test_explain_command.py  test_failure_recovery.py  test_flexible_splits.py  test_full_pipeline.py  test_parallel_pipeline.py  test_preprocess_workflow.py  test_preprocessing_pipeline.py  test_smoke_workflows.py  test_tune_workflow.py  test_view_specific_training.py  test_wizard_smart_defaults.py
tests/performance/: README.md  __init__.py  test_cache_performance.py  test_large_datasets.py
tests/reproducibility/: README.md  __init__.py  test_reproducibility_validation.py
tests/unit/: README.md  __init__.py  run_error_handling_tests.sh  test_baselines_registry.py  test_benchmark_report.py  test_bool_flags.py  test_boundary_conditions.py  test_cache_mode.py  test_cancer_dataset.py  (+102 more)
tools/: data_audit.py  report_pack.py
(+380 files in other folders)
